--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "type-check": "vue-tsc --build --force",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "lint": "run-s lint:*"
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -26,7 +25,6 @@
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/eslint-plugin": "1.1.7",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
@@ -36,8 +34,8 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "oxlint": "^0.11.0",
-    "prettier": "^3.3.3",
     "typescript": "~5.6.3",
+    "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.4",
