--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "type-check": "vue-tsc --build --force",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*"
+    "lint": "run-s lint:*",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -34,6 +35,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "oxlint": "^0.11.0",
+    "prettier": "^3.4.1",
     "typescript": "~5.6.3",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.10",
